# quad_sim

./: .gitignore  CMakeLists.txt  package.xml
include/quad_sim/: animStatePublisher.h  animStatePublisher.hpp  controllerInSubscriber.hpp  motorTq.hpp  propThTq.h  propThTq.hpp  quadEomSystem.h  quadEomSystem.hpp  sensorDataPublisher.hpp  simTimePublisher.hpp
launch/: simAnim_launch.py
scripts/: calcPropDataFit.py  eomGenerator.py
src/: animStatePublisher.cpp  controllerInSubscriber.cpp  motorTq.cpp  propThTq.cpp  quadEomSystem.cpp  sensorDataPublisher.cpp  simTimePublisher.cpp  solve_physics.cpp
